# advanced-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
hw_1/: README.md  file-1.txt  file-2.txt
hw_1/artifacts/: test_log_1.txt  test_log_2.txt  test_log_3.txt
hw_1/cli_1_1/: nl.py
hw_1/cli_1_2/: tail.py
hw_1/cli_1_3/: wc.py
hw_2/: Dockerfile  README.md  docker-compose.yml
hw_2/artifacts/: 2_1_latex_table.tex  2_2_repository_link.txt
hw_2/latex_2_1/: latex_generator.py  main.py
hw_2/latex_2_2/: 2_2_latex_doc.tex  main.py
hw_3/: README.md
hw_3/artifacts/: A.txt  AB.txt  B.txt  C.txt  CD.txt  array*.txt  array+.txt  array-.txt  array_div.txt  hash.txt  matrix@.txt
hw_3/oop_3_1/: matrix.py  run_matrix_operations.py
hw_3/oop_3_2/: advanced_array.py  mixins.py  run_operations.py
hw_3/oop_3_3/: matrix.py  mixins.py  run_matrix_operations.py
hw_4/: README.md
hw_4/artifacts/: results_4_1.txt  results_4_2.txt  results_4_3.txt
hw_4/mt_4_1/: fibonacci_func.py
hw_4/mt_4_2/: integrate_func.py
hw_4/mt_4_3/: main.py  process_a.py  process_b.py  utils.py
hw_5/: README.md
hw_5/artifacts/: offers_5_2.json
hw_5/async_5_1/: downloader.py
hw_5/async_5_2/: parser.py
